# trs_4

./: CMakeLists.txt  Лабораторная работа ТРС 4.docx  первое.mw
trs_4/: CMakeLists.txt  for_task_1.h  task_1.cpp  task_2.cpp  task_2_1.cpp  task_3.cpp  task_4.cpp  task_5.cpp  test.cpp  trs_4.cpp  trs_4.h
